buttons added and changed

--- a/css/bootstrap/bootstrap.html
+++ b/css/bootstrap/bootstrap.html
@@ -14,16 +14,38 @@
     <link rel="stylesheet" href="app.css" />
     <title>bootstrap experiments</title>
   </head>
+
   <body>
-    <h1>Placeholder</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui iste quaerat
-      sequi deleniti? Officia cum quae beatae praesentium officiis est enim
-      necessitatibus maiores quaerat labore laudantium soluta molestiae iste,
-      provident aperiam quo consequuntur aliquam qui unde. Omnis, eius laborum
-      sed expedita placeat architecto pariatur accusamus natus numquam atque
-      deserunt mollitia.
-    </p>
+    <div class="container-fluid">
+      <div class="btns">
+        <!-- You can change every color! So DO NOT choose the btn based on their color. 
+        Choose the btn based on it's meaning -->
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-success" disabled>
+          Success disabled
+        </button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-outline-primary">
+          Primary Outline
+        </button>
+        <button type="button" class="btn btn-outline-success btn-sm">
+          Success Outline
+        </button>
+        <button type="button" class="btn btn-outline-info btn-lg">
+          Info Outline
+        </button>
+      </div>
+      <!-- DO NOT worry about memorize this!! Keep the docs openned -->
+      <h1>Placeholder</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui iste
+        quaerat sequi deleniti? Officia cum quae beatae praesentium officiis est
+        enim necessitatibus maiores quaerat labore laudantium soluta molestiae
+        iste, provident aperiam quo consequuntur aliquam qui unde. Omnis, eius
+        laborum sed expedita placeat architecto pariatur accusamus natus numquam
+        atque deserunt mollitia.
+      </p>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
