typografy bootstrap done

--- a/css/bootstrap/bootstrap.html
+++ b/css/bootstrap/bootstrap.html
@@ -16,10 +16,14 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="btns">
         <!-- You can change every color! So DO NOT choose the btn based on their color. 
         Choose the btn based on it's meaning -->
+        <h1 class="display-1 text-center text-primary bg-warning">
+          Bootstrap Playground
+        </h1>
+        <h1 class="display-4">Display 4</h1>
         <button type="button" class="btn btn-primary">Primary</button>
         <button type="button" class="btn btn-success" disabled>
           Success disabled
@@ -36,8 +40,8 @@
         </button>
       </div>
       <!-- DO NOT worry about memorize this!! Keep the docs openned -->
-      <h1>Placeholder</h1>
-      <p>
+      <h1 class="display-2">Typography</h1>
+      <p class="lead">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui iste
         quaerat sequi deleniti? Officia cum quae beatae praesentium officiis est
         enim necessitatibus maiores quaerat labore laudantium soluta molestiae
@@ -45,6 +49,15 @@
         laborum sed expedita placeat architecto pariatur accusamus natus numquam
         atque deserunt mollitia.
       </p>
+      <blockquote class="blockquote text-right bg-light">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
+          obcaecati praesentium eius veniam asperiores assumenda earum optio
+          odio doloremque dolorem provident, cumque saepe hic itaque adipisci
+          ad? Veniam, eligendi autem.
+        </p>
+        <p class="blockquote-footer">M. lorem</p>
+      </blockquote>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
