--- a/css/bootstrap/bootstrap.html
+++ b/css/bootstrap/bootstrap.html
@@ -23,8 +23,12 @@
         <h1 class="display-1 text-center text-primary bg-warning">
           Bootstrap Playground
         </h1>
-        <h1 class="display-4">Display 4</h1>
-        <button type="button" class="btn btn-primary">Primary</button>
+        <h1 class="display-4">
+          Buttons <span class="badge badge-success">New</span>
+        </h1>
+        <button type="button" class="btn btn-primary badge-pill">
+          Primary
+        </button>
         <button type="button" class="btn btn-success" disabled>
           Success disabled
         </button>
@@ -37,6 +41,23 @@
         </button>
         <button type="button" class="btn btn-outline-info btn-lg">
           Info Outline
+        </button>
+        <button class="btn btn-primary btn-lg">
+          Updates <span class="badge badge-light">New</span>
+        </button>
+      </div>
+      <h3>Button Groups</h3>
+      <div class="btn-group">
+        <button class="btn btn-warning">One</button>
+        <button class="btn btn-warning">Two</button>
+        <button class="btn btn-warning">Three</button>
+      </div>
+      <h3>Alerts</h3>
+      <div class="alert alert-danger alert-dismissible fade show">
+        <h4 class="alert-heading">Oh No!</h4>
+        Carefull!! You are about to end the worl as we know it!!
+        <button aria-label="Close" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <!-- DO NOT worry about memorize this!! Keep the docs openned -->
