bootstrap grid row

--- a/css/bootstrap/bootstrap_grid/index.html
+++ b/css/bootstrap/bootstrap_grid/index.html
@@ -19,8 +19,21 @@
       </h1>
       <div class="row">
         <!-- IN BOOTSTRAP, EVERY ROW HAS 12 UNITS OF SPACE TO USE!!! -->
-        <div class="col-4 bg-success">I AM 6 UNITS</div>
+        <div class="col-2 bg-success">I AM 2 UNITS</div>
         <div class="col-8 bg-danger">I AM 8 UNITS</div>
+        <div class="col-2 bg-success">I AM 2 UNITS</div>
+      </div>
+      <div class="row">
+        <!-- IN BOOTSTRAP, EVERY ROW HAS 12 UNITS OF SPACE TO USE!!! -->
+        <div class="col-3 bg-success">I AM 3 UNITS</div>
+        <div class="col-6 bg-danger">I AM 6 UNITS</div>
+        <div class="col-3 bg-success">I AM 3 UNITS</div>
+      </div>
+      <div class="row">
+        <!-- IN BOOTSTRAP, EVERY ROW HAS 12 UNITS OF SPACE TO USE!!! -->
+        <div class="col bg-success">I AM 3 UNITS</div>
+        <div class="col bg-danger">I AM 6 UNITS</div>
+        <div class="col bg-success">I AM 3 UNITS</div>
       </div>
     </div>
     <script
