learning grid utilities

--- a/css/bootstrap/bootstrap_grid/index.html
+++ b/css/bootstrap/bootstrap_grid/index.html
@@ -31,9 +31,59 @@
       </div>
       <div class="row">
         <!-- IN BOOTSTRAP, EVERY ROW HAS 12 UNITS OF SPACE TO USE!!! -->
-        <div class="col bg-success">I AM 3 UNITS</div>
-        <div class="col bg-danger">I AM 6 UNITS</div>
-        <div class="col bg-success">I AM 3 UNITS</div>
+        <div class="col bg-warning">I MUST ADAPT</div>
+        <div class="col-5 bg-primary">I USE 5 UNITS</div>
+        <div class="col bg-warning">I MUST ADAPT</div>
+      </div>
+      <h2 class="display-4">Responsive Grid</h2>
+      <div class="row">
+        <div class="col-md-6 col-xl-3 bg-primary">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sunt
+          dicta ea distinctio commodi labore accusantium inventore odio
+          repudiandae tempore autem culpa qui voluptate, quae libero dolorem in
+          quibusdam rem!
+        </div>
+        <div class="col-md-6 col-xl-3 bg-danger">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sunt
+          dicta ea distinctio commodi labore accusantium inventore odio
+          repudiandae tempore autem culpa qui voluptate, quae libero dolorem in
+          quibusdam rem!
+        </div>
+        <div class="col-md-6 col-xl-3 bg-primary">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sunt
+          dicta ea distinctio commodi labore accusantium inventore odio
+          repudiandae tempore autem culpa qui voluptate, quae libero dolorem in
+          quibusdam rem!
+        </div>
+        <div class="col-md-6 col-xl-3 bg-danger">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sunt
+          dicta ea distinctio commodi labore accusantium inventore odio
+          repudiandae tempore autem culpa qui voluptate, quae libero dolorem in
+          quibusdam rem!
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-md-6 col-xl-4">
+          <img
+            class="img-fluid"
+            src="https://images.unsplash.com/photo-1524123143649-3b6ed278f40c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=738&q=80"
+            alt="bird in a stick"
+          />
+        </div>
+        <div class="col-md-6 col-xl-4">
+          <img
+            class="img-fluid"
+            src="https://images.unsplash.com/photo-1519060135737-7d267e7a194a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+            alt="bird with eyes"
+          />
+        </div>
+        <div class="col-md-6 col-xl-4">
+          <img
+            class="img-fluid"
+            src="https://images.unsplash.com/photo-1592116080530-030715e389f7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=625&q=80"
+            alt="sorounded bird"
+          />
+        </div>
       </div>
     </div>
     <script
