bootstrap grid done

--- a/css/bootstrap/bootstrap_grid/index.html
+++ b/css/bootstrap/bootstrap_grid/index.html
@@ -62,6 +62,68 @@
           quibusdam rem!
         </div>
       </div>
+
+      <h2 class="display-4">Grid Alignment</h2>
+      <div class="row align-items-start">
+        <div class="col-3 bg-danger">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+          sint repellat maiores omnis voluptatem? Ex amet accusantium fuga illum
+          error repudiandae eum enim possimus ab debitis. Consequuntur dicta
+          quibusdam ducimus.
+        </div>
+        <div class="col-3 bg-warning">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+          sint repellat maiores omnis voluptatem? Ex amet accusantium fuga illum
+          error repudiandae eum enim possimus ab debitis. Consequuntur dicta
+          quibusdam ducimus. Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Asperiores eum recusandae ut minima unde mollitia, voluptatum
+          doloremque, qui sint, deserunt cumque optio corporis distinctio
+          quaerat molestiae? Dolores iure adipisci sint. Lorem ipsum dolor sit
+          amet consectetur, adipisicing elit. Facere, minima fugit quidem modi
+          ea ipsam suscipit quam doloribus, nesciunt sequi esse hic nulla vitae
+          provident, ipsum distinctio delectus incidunt laboriosam.
+        </div>
+        <div class="col-3 bg-success">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+          sint repellat maiores omnis voluptatem? Ex amet accusantium fuga illum
+          error repudiandae eum enim possimus ab debitis. Consequuntur dicta
+          quibusdam ducimus. Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Nam laudantium ea ipsum voluptate animi unde repellendus, magnam
+          rerum inventore libero facere alias sunt officia nihil numquam eveniet
+          asperiores. Nesciunt, quae.
+        </div>
+        <div class="col-3 bg-info align-self-end">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+          sint repellat maiores omnis voluptatem? Ex amet accusantium fuga illum
+          error repudiandae eum enim possimus ab debitis. Consequuntur dicta
+          quibusdam ducimus.
+        </div>
+      </div>
+
+      <h2 class="display-4">Justify Content</h2>
+      <div
+        class="
+          row
+          border
+          justify-content-start
+          justify-content-lg-end
+          justify-content-xl-between
+        "
+      >
+        <div class="col-md-4 bg-primary">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam,
+          aut facere nostrum dicta voluptatibus a perferendis voluptatem
+          cupiditate saepe temporibus pariatur eum! Ipsum dolore ex culpa
+          voluptatibus inventore, ab exercitationem?
+        </div>
+        <div class="col-md-4 bg-info">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam,
+          aut facere nostrum dicta voluptatibus a perferendis voluptatem
+          cupiditate saepe temporibus pariatur eum! Ipsum dolore ex culpa
+          voluptatibus inventore, ab exercitationem?
+        </div>
+      </div>
+
       <div class="row no-gutters">
         <div class="col-md-6 col-xl-4">
           <img
