--- a/javaScript/logical_operators/index.html
+++ b/javaScript/logical_operators/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Truthy vs Falsy</title>
+    <title>Logiacl Operators</title>
   </head>
   <body>
-    <h1>Truthy and Falsy</h1>
+    <h1>Logical Operators</h1>
     <script src="app.js"></script>
   </body>
 </html>
